Prettied up the contact page and got not found page up and functional.
Next up: functional contact form!

--- a/TODO
+++ b/TODO
@@ -1,9 +1,8 @@
-6 April
-  Get it looking like blogger
-  Get it on GitHub
+make contact form functional
 
-7 April
-  Link to blogger profile for blog page
+Look into Heroku
+
+Link to blogger profile for blog page
   
 Later
   Use blogger data api to reproduce blogger content natively
