--- a/TODO
+++ b/TODO
@@ -9,7 +9,7 @@ Later
     http://code.google.com/apis/blogger/
     (can this pull profile information, too?)
     
-  Clearn up styles.sass, remove duplication
+  Clear up styles.sass, remove duplication
   
   FORK into chadoh
   
