Discovered other things that need to be done (see TODO). Using Markdown instead of Textile, to no avail.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
-make contact form functional
+make "current_tab_if" helper work with arrays
+
+fix bad markup being created by markdown/textile (unmatched closing </p>s!)
+
+make contact form functional (install pony successfully)
 
 Use blogger data api to reproduce blogger content natively
 
