--- a/TODO
+++ b/TODO
@@ -1,10 +1,13 @@
 make contact form functional (configure mail function (pony? ssmtp?))
+  ->Maybe it will work on Heroku? Let's find out!
+Get it on Heroku
 
-Use blogger data api to reproduce blogger content natively
-  successfully pulling feed, now narrow it and make it pretty
+Add link to actual blog in side bar (only on Thoughts tab--use content_for gem)
+Add posted time at bottom of each post
+Show labels (initially links to blogger, then by pulling fresh blogger content into here)
+Show number of comments (slide-toggle them when clicked)
+Add pagination (without and then with ajax calls)
 
-Look into Heroku
-  
 Later
   Clear up styles.sass, remove duplication
   
