--- a/TODO
+++ b/TODO
@@ -1,15 +1,12 @@
-make contact form functional (configure mail function (pony? ssmtp?))
-  ->Maybe it will work on Heroku? Let's find out!
-Get it on Heroku
+make contact form functional (hopefuly Pony 1.0 will fix all my woes)
 
-Add link to actual blog in side bar (only on Thoughts tab--use content_for gem)
 Add posted time at bottom of each post
 Show labels (initially links to blogger, then by pulling fresh blogger content into here)
 Show number of comments (slide-toggle them when clicked)
 Add pagination (without and then with ajax calls)
 
 Later
-  Clear up styles.sass, remove duplication
+  Clean up styles.sass, remove duplication
   
   FORK into chadoh
   
