Added comments to partials.rb

--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
 make contact form functional (hopefuly Pony 1.0 will fix all my woes)
 
-Show labels (initially links to blogger, then by pulling fresh blogger content into here)
 Show number of comments (slide-toggle them when clicked)
 Add pagination (without and then with ajax calls)
+Turn partials.rb into an honest-to-goodness gem with support for :spacer_template
 
 Later
   Clean up styles.sass, remove duplication
