--- a/README.rdoc
+++ b/README.rdoc
@@ -9,4 +9,4 @@ Things are definitely rough around the edges. You might even cut yourself on the
 ==Getting Blooger content (isn't that a fabulous typo?)
 The /thoughts page pulls the last 10 (ok, 11 for the time being, because one is ignored) entries from Blogger using the GData API. 
 
-The xml returned by open-uri is parsed with crack and turned into a big ol' hash. Rather than navigating this nasty creature the usal way, I {extend the Hash class}[http://www.goodercode.com/wp/convert-your-hash-keys-to-object-properties-in-ruby/] so that I can access hash keys as object properties (that is, with dot notation). (There's probably a better way to do that, but like Kerry, I too will code gooder one day and don't yet know this better way. Enlighten us if you'd be so kind.)
+The xml returned by open-uri is parsed with crack and turned into a big ol' hash. Rather than navigating this nasty creature the usual way, I {extend the Hash class}[http://www.goodercode.com/wp/convert-your-hash-keys-to-object-properties-in-ruby/] so that I can access hash keys as object properties (that is, with dot notation). (There's probably a better way to do that, but like Kerry, I too will code gooder one day and don't yet know this better way. Enlighten us if you'd be so kind.)
